<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="2"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_by_price"
        android:orderInCategory="3"
        android:title="@string/action_sort_by_price"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_by_date"
        android:orderInCategory="4"
        android:title="@string/action_sort_by_date"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter"
        android:orderInCategory="5"
        android:title="@string/action_filter"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />

</menu>