<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/dp4"
            android:text="@string/login_text"
            android:textSize="@dimen/text_large" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="@dimen/dp48"
                android:layout_marginRight="@dimen/dp4"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/login_prompt"
                android:textSize="@dimen/text_medium" />

            <EditText
                android:id="@+id/identityField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                android:layout_marginLeft="@dimen/dp4"
                android:layout_marginRight="@dimen/dp4"
                android:gravity="center_vertical"
                android:inputType="text"
                android:textSize="@dimen/text_medium" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="@dimen/dp48"
                android:layout_marginRight="@dimen/dp4"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/password_prompt"
                android:textSize="@dimen/text_medium" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                android:layout_marginLeft="@dimen/dp4"
                android:layout_marginRight="@dimen/dp4"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:textSize="@dimen/text_medium" />

        </TableRow>


        <TextView
            android:id="@+id/restoreLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp4"
            android:clickable="true"
            android:gravity="right"
            android:text="@string/restore_link"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/text_medium" />

        <CheckBox
            android:id="@+id/rememberLoginBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_login_text"
            android:textSize="@dimen/dp16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_margin="@dimen/dp4"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp48"
                android:layout_marginLeft="@dimen/dp4"
                android:text="@string/register_text"
                android:textSize="@dimen/text_medium" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="@dimen/dp144"
                android:layout_height="@dimen/dp48"
                android:layout_marginLeft="@dimen/dp4"
                android:text="@string/login_text"
                android:textSize="@dimen/text_medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/dp4"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/loginFacebookButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp48"
                android:layout_marginBottom="@dimen/dp4"
                android:height="@dimen/dp40"
                android:background="@drawable/btn_facebook_bg"
                android:text="@string/facebook_button_text" />

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right" />
</LinearLayout>