<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="@dimen/dp48"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp4"
            android:text="@string/restore_password_page_name"
            android:textSize="@dimen/text_large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dp16">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp4"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp48"
                android:layout_marginRight="@dimen/dp4"
                android:gravity="center_vertical|right"
                android:text="@string/email_field_prompt"
                android:textSize="@dimen/text_medium" />

            <EditText
                android:id="@+id/loginField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                android:layout_marginLeft="@dimen/dp4"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_medium" />
        </LinearLayout>

        <Button
            android:id="@+id/restorePasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp48"
            android:layout_marginTop="@dimen/dp4"
            android:text="@string/button_restore"
            android:textSize="@dimen/text_medium" />
    </LinearLayout>
</LinearLayout>
                